/*
 * Copyright 2023 PixelsDB.
 *
 * This file is part of Pixels.
 *
 * Pixels is free software: you can redistribute it and/or modify
 * it under the terms of the Affero GNU General Public License as
 * published by the Free Software Foundation, either version 3 of
 * the License, or (at your option) any later version.
 *
 * Pixels is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * Affero GNU General Public License for more details.
 *
 * You should have received a copy of the Affero GNU General Public
 * License along with Pixels.  If not, see
 * <https://www.gnu.org/licenses/>.
 */

// grpc protocol for pixels-turbo.

syntax = "proto3";

option java_multiple_files = false;
option java_package = "io.pixelsdb.pixels.turbo";
option java_outer_classname = "TurboProto";

package turbo.proto;

// The service definitions for pixels-turbo framework.
service TurboFrameworkService {
  rpc EstimateQueryCost (EstimateQueryCostRequest) returns (EstimateQueryCostResponse);
  rpc SubmitQuery (SubmitQueryRequest) returns (SubmitQueryResponse);
}

// The service definitions for the serverless workers in vHive.
service TurboWorkerService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// begin request/response definition for pixels-turbo framework services

enum ExecutionHint {
  LOW_COST = 0;
  IMMEDIATE = 1;
  ADAPTIVE = 2;
  SCHEDULED = 3;
}

message EstimateQueryCostRequest {
  string query = 1;
  ExecutionHint hint = 2;
}

message SubmitQueryRequest {
  string query = 1;
  ExecutionHint hint = 2;
  optional uint64 startTime = 3;
}

message SubmitQueryResponse {
  int32 errorCode = 1;
  string errorMsg = 2;
  optional string callbackToken = 3;
}

// begin request/response definition for vHive worker services

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string msg = 1;
}


